--- a/apps/auth-service/tsconfig.json
+++ b/apps/auth-service/tsconfig.json
@@ -4,6 +4,12 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/backend-utils"
+    },
+    {
+      "path": "../../database"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
