--- a/package.json
+++ b/package.json
@@ -2,38 +2,77 @@
   "name": "@multi-venden/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "npx nx run-many --target=serve --all"
+  },
   "private": true,
   "dependencies": {
+    
+    "@prisma/client": "^6.15.0",
     "axios": "^1.6.0",
-    "express": "^4.21.2"
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-http-proxy": "^2.1.1",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
+    "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
+    "prisma": "^6.15.0",
+    "stripe": "^18.5.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nx/docker": "21.4.1",
     "@nx/esbuild": "21.4.1",
+    "@nx/express": "^21.4.1",
     "@nx/jest": "21.4.1",
     "@nx/js": "21.4.1",
     "@nx/node": "21.4.1",
+    "@nx/web": "21.4.1",
+    "@nx/webpack": "21.4.1",
     "@nx/workspace": "21.4.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/express-http-proxy": "^1.6.7",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "20.19.9",
+    "@types/nodemailer": "^7.0.1",
+    "@types/swagger-ui-express": "^4.1.8",
     "esbuild": "^0.19.2",
     "jest": "^30.0.2",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
     "nx": "21.4.1",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "utils",
+    "libs/utils",
+    "libs/*",
+    "database"
   ]
 }
