--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,18 @@
     },
     {
       "path": "./apps/auth-service"
+    },
+    {
+      "path": "./apps/api-gateway-e2e"
+    },
+    {
+      "path": "./apps/api-gateway"
+    },
+    {
+      "path": "./database"
+    },
+    {
+      "path": "./libs/backend-utils"
     }
   ]
 }
