--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "private": true,
   "dependencies": {
-    
     "@prisma/client": "^6.15.0",
+    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query-devtools": "^5.87.4",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
@@ -22,19 +25,28 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "motion": "^12.23.12",
     "nodemailer": "^7.0.6",
     "prisma": "^6.15.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "6.29.0",
     "stripe": "^18.5.0",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/docker": "21.4.1",
     "@nx/esbuild": "21.4.1",
     "@nx/express": "^21.4.1",
     "@nx/jest": "21.4.1",
     "@nx/js": "21.4.1",
     "@nx/node": "21.4.1",
+    "@nx/react": "^21.4.1",
+    "@nx/vite": "21.4.1",
     "@nx/web": "21.4.1",
     "@nx/webpack": "21.4.1",
     "@nx/workspace": "21.4.1",
@@ -44,6 +56,8 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.1.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
@@ -54,18 +68,32 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "20.19.9",
     "@types/nodemailer": "^7.0.1",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@types/swagger-ui-express": "^4.1.8",
-    "esbuild": "^0.19.2",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
+    "ajv": "^8.0.0",
+    "autoprefixer": "10.4.13",
+    "esbuild": "^0.25.9",
     "jest": "^30.0.2",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "21.4.1",
+    "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "tailwindcss": "3.4.3",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^3.0.0",
     "webpack-cli": "^5.1.4"
   },
   "workspaces": [
